# pauling

./: ARCHITECTURE.md  Cargo.toml
src/: errors.rs  lib.rs  molecule.rs
src/core/: bond.rs
src/perception/: aromaticity.rs  kekulize.rs  mod.rs  ring.rs  state.rs
src/resonance/: candidate.rs  find.rs  mod.rs  system.rs
tests/common/: cases.rs  molecules.rs
