[package]
name = "pauling"
version = "0.1.0"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/pauling"
edition = "2024"
description = "A pure Rust library for canonical resonance structure identification in molecules."
keywords = ["chemistry", "resonance", "molecules", "chemoinformatics"]
categories = ["science"]
readme = "README.md"

[dependencies]
thiserror = "2.0.17"

[lib]
name = "pauling"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
